--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>PJ10</title>
+  <title>Factores del Crecimiento Poblacional</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-  <app-root></app-root>
+  <aplicacio></aplicacio>
 </body>
+
 </html>
