Borrar homecomponent que no estaba en modo standalone

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <div class="header-left">
       <img src="img/logo.jpg" alt="Logo">
       <nav>
-        <a routerLink="/home" routerLinkActive="active">Home</a>
+        <a routerLink="/cartas" routerLinkActive="active">Home</a>
         <a routerLink="/solar" routerLinkActive="active">Solar</a>
         <a routerLink="/biomasa" routerLinkActive="active">Biomasa</a>
         <a routerLink="/eolica" routerLinkActive="active">Eólica</a>
