--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <app-root></app-root> <!-- Aquí Angular inserta tu componente raíz -->
+  <app-root></app-root>
 </body>
 
 </html>
